force-app/main/default/objects/HICarrierVersionDetail__c/HICarrierVersionDetail__c.object-meta.xml
<CustomObject>
    <label>HI CarrierVersion Detail</label>
    <nameField>
        <label>Hi CarrierVersion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hi CarrierVersion Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>