force-app/main/default/objects/HICarrierVersionDetail__c/fields/Effective_date__c.field-meta.xml
<CustomField>
    <fullName>Effective_date__c</fullName>
    <description>This field is populated from hippo, published via kafka &amp; workato (Hi Carrier version detail staging table), date when carrier was updated in hippo</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective date</label>
    <type>Date</type>
</CustomField>