force-app/main/default/objects/HICarrierVersionDetail__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>This field is populated from hippo, published via kafka &amp; workato (Hi Carrier version detail staging table)
Populated from Hippo(Auto Generated)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>