force-app/main/default/objects/HICarrierVersionDetail__c/fields/gusto_default_rating_structure__c.field-meta.xml
<CustomField>
    <fullName>gusto_default_rating_structure__c</fullName>
    <description>This field is populated from hippo, published via kafka &amp; workato (Hi Carrier version detail staging table)</description>
    <label>gusto_default_rating_structure</label>
    <type>TextArea</type>
</CustomField>