force-app/main/default/objects/HICarrierVersionDetail__c/fields/max_number_of_ghost_plans__c.field-meta.xml
<CustomField>
    <fullName>max_number_of_ghost_plans__c</fullName>
    <description>This field is populated from hippo, published via kafka &amp; workato (Hi Carrier version detail staging table)</description>
    <label>max_number_of_ghost_plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>