force-app/main/default/objects/HICarrierVersionDetail__c/fields/oos_plan_restrictions__c.field-meta.xml
<CustomField>
    <fullName>oos_plan_restrictions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oos Plan Restrictions</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>