force-app/main/default/objects/HICarrierVersionDetail__c/fields/Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Processed_At__c</fullName>
    <description>This field is populated in salesforce, captures the time when record was processed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Processed At</label>
    <type>DateTime</type>
</CustomField>