force-app/main/default/objects/HICarrierVersionDetail__c/fields/term_submission_event__c.field-meta.xml
<CustomField>
    <fullName>term_submission_event__c</fullName>
    <description>This field is populated from hippo, published via kafka &amp; workato (Hi Carrier version detail staging table)</description>
    <label>term_submission_event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>