force-app/main/default/objects/HICarrierVersionDetail__c/fields/term_variation_num__c.field-meta.xml
<CustomField>
    <fullName>term_variation_num__c</fullName>
    <description>This field is populated from hippo, published via kafka &amp; workato (Hi Carrier version detail staging table)</description>
    <label>term_variation_num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>