force-app/main/default/objects/HICarrierVersionDetail__c/fields/waiting_period_default_for_new_hires__c.field-meta.xml
<CustomField>
    <fullName>waiting_period_default_for_new_hires__c</fullName>
    <description>This field is populated from hippo, published via kafka &amp; workato (Hi Carrier version detail staging table)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>waiting_period_default_for_new_hires</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>